user logs function added
